--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,7 @@
         <div class="col-lg-8 mx-auto" id="WWD">
           <div class="container">
             <h2>What we do</h2>
-            <p>We offer unique opportunities for all society members, including meeting regular guest speakers from various industries. This includes opportunites to interact and engage through hands on tasks and collaboratewith other like minded individuals.
-              </p>
+            <p>We offer unique opportunities for all society members, including meeting regular guest speakers from various industries. This includes opportunites to interact and engage through hands on tasks and collaboratewith other like minded individuals.</p>
             <br>
             <p>Our regular events are designed to enhance student's transferable skills and gain valuable experiences which can be used for freelancing opportunities, venture start up development or within a graduate scheme.</p>
             <br>
@@ -221,26 +220,24 @@
           <h2 class="title">Contact us</h2>
           <p class="lead">We are more than happy to answer any questions or comments you might have. Please use the form below to send us a message and we will get back to you as soon as possible.</p>
 
-
-
           <!-- creating a form -->
-<form method="POST" action="http://formspree.io/liamkarlmiddleton@hotmail.co.uk">
-   <meta name="referrer" content="origin">
-   <div class="form-inline">
-      <!-- creating a div class to group the form -->
-      <label for="name">Hi My Name Is</label> <input type="text" name="name" class="form-control ml-1">
-   </div>
-   <div class="form-group">
-      <label for="message">I would like to ask you about</label> <textarea name="message"
-         class="form-control message"></textarea>
-   </div>
-   <div class="form-inline">
-      <label for="email">My Email Is</label> <input type="text" name="email" class="form-control ml-1">
-   </div>
-   <br>
-   <input type="submit" value="Speak Soon" class= "btn btn-primary">
-   <!--<input type="hidden" name="_next" value="INSERT URL HERE"-->
-</form>
+          <form method="POST" action="http://formspree.io/liamkarlmiddleton@hotmail.co.uk">
+            <meta name="referrer" content="origin">
+            <div class="form-inline">
+                <!-- creating a div class to group the form -->
+                <label for="name">Hi My Name Is</label> <input type="text" name="name" class="form-control ml-1">
+            </div>
+            <div class="form-group">
+                <label for="message">I would like to ask you about</label> <textarea name="message"
+                  class="form-control message"></textarea>
+            </div>
+            <div class="form-inline">
+                <label for="email">My Email Is</label> <input type="text" name="email" class="form-control ml-1">
+            </div>
+            <br>
+            <input type="submit" value="Speak Soon" class= "btn btn-primary">
+            <!--<input type="hidden" name="_next" value="INSERT URL HERE"-->
+          </form>
 
         </div>
       </div>
