--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
   <header class="hero d-flex flex-column justify-content-center logo">
     <div class="container text-center">
       <h1 class="align-middle">
-        <img src="assets/img/logo.png" alt="uclan">
+        <img src="assets/img/logo.png" alt="UCLan">
         <span class="d-block">Entrepreneurial</span>
         <span class="d-block">Society</span>
       </h1>
