--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-          <img src="/assets/img/entsoc_logo.svg" alt="Entrepreneurial Society">
+          <img src="assets/img/entsoc_logo.svg" alt="Entrepreneurial Society">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
   <header class="hero d-flex flex-column justify-content-center logo">
     <div class="container text-center">
       <h1 class="align-middle">
-        <img src="/assets/img/logo.png" alt="uclan">
+        <img src="assets/img/logo.png" alt="UCLan">
         <span class="d-block">Entrepreneurial</span>
         <span class="d-block">Society</span>
       </h1>
@@ -187,7 +187,7 @@
               </div>
 
               <div class="col-12 col-md-2 d-flex flex-column justify-content-center align-items-center event-more">
-                <a class="btn btn-primary btn-sm more">Take Part</a>                    
+                <a href="#" class="btn btn-primary btn-sm more">Take Part</a>                    
               </div>
 
               <!-- <div class="col-12 collapse event-extra-info">
@@ -212,7 +212,7 @@
               </div>
 
               <div class="col-12 col-md-2 d-flex flex-column justify-content-center align-items-center event-more">
-                <a class="btn btn-primary btn-sm more">Take Part</a>                    
+                <a href="#" class="btn btn-primary btn-sm more">Take Part</a>                    
               </div>
             </li>
 
@@ -234,7 +234,7 @@
                 </div>
   
                 <div class="col-12 col-md-2 d-flex flex-column justify-content-center align-items-center event-more">
-                  <a class="btn btn-primary btn-sm more">Take Part</a>                    
+                  <a href="#" class="btn btn-primary btn-sm more">Take Part</a>                    
                 </div>
               </li>
   
@@ -253,7 +253,7 @@
                 </div>
   
                 <div class="col-12 col-md-2 d-flex flex-column justify-content-center align-items-center event-more">
-                  <a class="btn btn-primary btn-sm more">Take Part</a>                    
+                  <a href="#" class="btn btn-primary btn-sm more">Take Part</a>                    
                 </div>
               </li>
   
@@ -272,7 +272,7 @@
                 </div>
   
                 <div class="col-12 col-md-2 d-flex flex-column justify-content-center align-items-center event-more">
-                  <a class="btn btn-primary btn-sm more">Take Part</a>                    
+                  <a href="#" class="btn btn-primary btn-sm more">Take Part</a>                    
                 </div>
               </li>  
             </div>
