Date and button fixes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- hero image -->
   <header class="hero d-flex flex-column justify-content-center logo">
     <div class="container text-center">
-      <h1 class="align-middle">
+      <h1>
         <img src="assets/img/logo.png" alt="UCLan">
         <span class="d-block">Entrepreneurial</span>
         <span class="d-block">Society</span>
@@ -83,7 +83,7 @@
                   <div class="col-12 col-md-4">
 
                     <h5 class="sub-heading">Networking</h5>
-                    <p class="info">The Entreprenurial Socitey encourages networking opportunities with other students, members of staff and industry professionals. </p>
+                    <p class="info">The Entrepreneurial Society encourages networking opportunities with other students, members of staff and industry professionals. </p>
 
                   </div>
 
@@ -91,7 +91,7 @@
                   <div class="col-12 col-md-4" id="bleft">
 
                     <h5 class="sub-heading">Guest Speakers</h5>
-                    <p class="info">We create opportunities for you to learn and network with industry specific guest speakers. It is a great chance for you to learn from the professionals</p>
+                    <p class="info">We create opportunities for you to learn and network with industry specific guest speakers. It is a great chance for you to learn from the professionals.</p>
 
                   </div>
 
@@ -99,7 +99,7 @@
                   <div class="col-12 col-md-4" id="bleft">
 
                     <h5 class="sub-heading">Start-Ups</h5>
-                    <p class="info">Do you have an idea or Start-Up concept that needs help with development? The Entreprenurial Society can assist you with this.</p>
+                    <p class="info">Do you have an idea or Start-Up concept that needs help with development? The Entrepreneurial Society can assist you with this.</p>
 
                   </div>
                 </div>
@@ -216,8 +216,6 @@
               </div>
             </li>
 
-            <button class="btn btn-primary btn-sm more-events mx-auto d-block" data-toggle="collapse" data-target=".more-events">See More Events</button>
-
             <div class="more-events collapse">
               <li class="row bg-light event-item">
                 <div class="col-12 col-md-2">
@@ -276,6 +274,9 @@
                 </div>
               </li>
             </div>
+
+            <button class="btn btn-primary btn-sm more-events mx-auto d-block" data-toggle="collapse" data-target=".more-events">See More Events</button>
+
           </ul>
         </div>
       </div>
