Temp disable Google Map

--- a/src/index.html
+++ b/src/index.html
@@ -296,9 +296,9 @@
 
               <div id="map"></div>
               <!-- Replace the value of the key parameter with your own API key. -->
-              <script async defer
+              <!-- <script async defer
               src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQGto9imHonAlGQWV3PByYAAAB5lm96Nk&callback=initMap">
-              </script>
+              </script> -->
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
